--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <h1>Introducing Mobileapp</h1>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <h2>CONTACT US</h2>
+        <p>© 2019 GoIteens Template. All Rights Reserved</p>
+    </footer>
 </body>
 
 </html>
