--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -27,15 +29,23 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Introducing Mobileapp</h1>
-            <p>Maecenas vitae tellus sapien. Prasent</p>
-            <ul>
-                <li>semper scelerisque tristique a enim</li>
-                <li>Integer ut mattis nulla, eget vehicula elit</li>
-                <li>Prasent rutrum ac nunc et</li>
-            </ul>
-            <button type="button">Download</button>
+        <section class="hero">
+            <div class="container">
+                <div class="hero-items">
+                    <h1 class="section-title">Introducing Mobileapp</h1>
+                    <p>Maecenas vitae tellus sapien. Prasent</p>
+                    <ul>
+                        <li tabindex="0">semper scelerisque tristique a enim</li>
+                        <li>Integer ut mattis nulla, eget vehicula elit</li>
+                        <li>Prasent rutrum ac nunc et</li>
+                    </ul>
+                    <button type="button">Download</button>
+                </div>
+
+                <img src="./img/hero_img.png" class="tag-image" alt="Introducing Mobileapp">
+
+                <div class="image"></div>
+            </div>
         </section>
     </main>
     <footer>
